.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:53:17 **** Incremental Build of configuration Debug for project TpOrquestasMusicos ****
make all 
make: Nothing to be done for 'all'.
17:53:23 **** Incremental Build of configuration Debug for project TpOrquestasMusicos ****
make all 
make: Nothing to be done for 'all'.
18:19:23 **** Incremental Build of configuration Debug for project TpOrquestasMusicos ****
make all 
Building file: ../src/TpOrquestasMusicos.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TpOrquestasMusicos.d" -MT"src/TpOrquestasMusicos.o" -o "src/TpOrquestasMusicos.o" "../src/TpOrquestasMusicos.c"
../src/TpOrquestasMusicos.c: In function ‘main’:
../src/TpOrquestasMusicos.c:125:6: error: too few arguments to function ‘imprimirArrayMusicosStatusOk’
      imprimirArrayMusicosStatusOk(aMusico,CANT_MUSICOS);
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from ../src/TpOrquestasMusicos.c:18:
../src/musicos.h:38:5: note: declared here
 int imprimirArrayMusicosStatusOk(Musico *aArray, int cantidad,Instrumento *aInst,int cantInst);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/TpOrquestasMusicos.c:41:6: warning: unused variable ‘id’ [-Wunused-variable]
  int id;
      ^~
../src/TpOrquestasMusicos.c:39:6: warning: variable ‘flagAlta’ set but not used [-Wunused-but-set-variable]
  int flagAlta=ALTA_DNS;
      ^~~~~~~~
../src/TpOrquestasMusicos.c:36:9: warning: unused variable ‘unMusicoModif’ [-Wunused-variable]
  Musico unMusicoModif;
         ^~~~~~~~~~~~~
../src/TpOrquestasMusicos.c:28:7: warning: unused variable ‘confirmarModif’ [-Wunused-variable]
  char confirmarModif;
       ^~~~~~~~~~~~~~
In file included from ../src/TpOrquestasMusicos.c:16:
../src/TpOrquestasMusicos.c: At top level:
../src/orquestas.h:28:12: warning: ‘generarIdOrquesta’ declared ‘static’ but never defined [-Wunused-function]
 static int generarIdOrquesta(void);
            ^~~~~~~~~~~~~~~~~
In file included from ../src/TpOrquestasMusicos.c:17:
../src/instrumentos.h:27:12: warning: ‘generarIdInstrumento’ declared ‘static’ but never defined [-Wunused-function]
 static int generarIdInstrumento(void);
            ^~~~~~~~~~~~~~~~~~~~
In file included from ../src/TpOrquestasMusicos.c:18:
../src/musicos.h:30:12: warning: ‘generarIdMusico’ declared ‘static’ but never defined [-Wunused-function]
 static int generarIdMusico(void);
            ^~~~~~~~~~~~~~~
make: *** [src/subdir.mk:32: src/TpOrquestasMusicos.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
18:19:55 **** Incremental Build of configuration Debug for project TpOrquestasMusicos ****
make all 
Building file: ../src/TpOrquestasMusicos.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TpOrquestasMusicos.d" -MT"src/TpOrquestasMusicos.o" -o "src/TpOrquestasMusicos.o" "../src/TpOrquestasMusicos.c"
../src/TpOrquestasMusicos.c: In function ‘main’:
../src/TpOrquestasMusicos.c:41:6: warning: unused variable ‘id’ [-Wunused-variable]
  int id;
      ^~
../src/TpOrquestasMusicos.c:39:6: warning: variable ‘flagAlta’ set but not used [-Wunused-but-set-variable]
  int flagAlta=ALTA_DNS;
      ^~~~~~~~
../src/TpOrquestasMusicos.c:36:9: warning: unused variable ‘unMusicoModif’ [-Wunused-variable]
  Musico unMusicoModif;
         ^~~~~~~~~~~~~
../src/TpOrquestasMusicos.c:28:7: warning: unused variable ‘confirmarModif’ [-Wunused-variable]
  char confirmarModif;
       ^~~~~~~~~~~~~~
In file included from ../src/TpOrquestasMusicos.c:16:
../src/TpOrquestasMusicos.c: At top level:
../src/orquestas.h:28:12: warning: ‘generarIdOrquesta’ declared ‘static’ but never defined [-Wunused-function]
 static int generarIdOrquesta(void);
            ^~~~~~~~~~~~~~~~~
In file included from ../src/TpOrquestasMusicos.c:17:
../src/instrumentos.h:27:12: warning: ‘generarIdInstrumento’ declared ‘static’ but never defined [-Wunused-function]
 static int generarIdInstrumento(void);
            ^~~~~~~~~~~~~~~~~~~~
In file included from ../src/TpOrquestasMusicos.c:18:
../src/musicos.h:30:12: warning: ‘generarIdMusico’ declared ‘static’ but never defined [-Wunused-function]
 static int generarIdMusico(void);
            ^~~~~~~~~~~~~~~
Finished building: ../src/TpOrquestasMusicos.c
 
Building file: ../src/instrumentos.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/instrumentos.d" -MT"src/instrumentos.o" -o "src/instrumentos.o" "../src/instrumentos.c"
In file included from ../src/instrumentos.c:13:
../src/orquestas.h:28:12: warning: ‘generarIdOrquesta’ declared ‘static’ but never defined [-Wunused-function]
 static int generarIdOrquesta(void);
            ^~~~~~~~~~~~~~~~~
In file included from ../src/instrumentos.c:15:
../src/musicos.h:30:12: warning: ‘generarIdMusico’ declared ‘static’ but never defined [-Wunused-function]
 static int generarIdMusico(void);
            ^~~~~~~~~~~~~~~
Finished building: ../src/instrumentos.c
 
Building file: ../src/musicos.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/musicos.d" -MT"src/musicos.o" -o "src/musicos.o" "../src/musicos.c"
../src/musicos.c: In function ‘altaUnSoloMusicoPorUI’:
../src/musicos.c:159:5: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
     if(retorno == EXIT_SUCCESS);
     ^~
../src/musicos.c:160:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
     {
     ^
../src/musicos.c:165:7: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
       if(retorno == EXIT_SUCCESS);
       ^~
../src/musicos.c:166:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
       {
       ^
../src/musicos.c:144:6: warning: unused variable ‘auxIdInst’ [-Wunused-variable]
  int auxIdInst;
      ^~~~~~~~~
../src/musicos.c:142:6: warning: unused variable ‘auxIdOrq’ [-Wunused-variable]
  int auxIdOrq;
      ^~~~~~~~
In file included from ../src/musicos.c:13:
../src/musicos.c: At top level:
../src/orquestas.h:28:12: warning: ‘generarIdOrquesta’ declared ‘static’ but never defined [-Wunused-function]
 static int generarIdOrquesta(void);
            ^~~~~~~~~~~~~~~~~
In file included from ../src/musicos.c:14:
../src/instrumentos.h:27:12: warning: ‘generarIdInstrumento’ declared ‘static’ but never defined [-Wunused-function]
 static int generarIdInstrumento(void);
            ^~~~~~~~~~~~~~~~~~~~
Finished building: ../src/musicos.c
 
Building file: ../src/orquestas.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/orquestas.d" -MT"src/orquestas.o" -o "src/orquestas.o" "../src/orquestas.c"
In file included from ../src/orquestas.c:14:
../src/instrumentos.h:27:12: warning: ‘generarIdInstrumento’ declared ‘static’ but never defined [-Wunused-function]
 static int generarIdInstrumento(void);
            ^~~~~~~~~~~~~~~~~~~~
In file included from ../src/orquestas.c:15:
../src/musicos.h:30:12: warning: ‘generarIdMusico’ declared ‘static’ but never defined [-Wunused-function]
 static int generarIdMusico(void);
            ^~~~~~~~~~~~~~~
Finished building: ../src/orquestas.c
 
Building target: TpOrquestasMusicos
Invoking: GCC C Linker
gcc  -o "TpOrquestasMusicos"  ./src/TpOrquestasMusicos.o ./src/instrumentos.o ./src/musicos.o ./src/orquestas.o ./src/utn.o   
Finished building target: TpOrquestasMusicos
 
18:20:00 **** Incremental Build of configuration Debug for project TpOrquestasMusicos ****
make all 
make: Nothing to be done for 'all'.
